[package]
name = "weave"
version = "0.1.0"
edition = "2021"
description = "A CRDT-based version control system with conflict-free merging"
repository = "https://github.com/ryanrudd/weave"
license = "MIT"
keywords = ["vcs", "crdt", "merge", "version-control"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "=4.5.23", features = ["derive"] }
ratatui = "=0.28.1"
crossterm = "=0.27.0"
